--- a/interactive_Visualisation.Rmd
+++ b/interactive_Visualisation.Rmd
@@ -8,7 +8,8 @@ runtime: shiny
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-load("2022_01_06_100Workers_56days_Step5_Schedule_Location_Mask_StatusCounter_SIRday0.RData")
+# load("2022_01_06_100Workers_56days_Step5_Schedule_Location_Mask_StatusCounter_SIRday0.RData")
+load("2022_01_19_checkpoint1.RData")
 ```
 
 ```{r packages, include=FALSE}
@@ -51,18 +52,4 @@ renderPlot({
 },
   width=1100, heigh=850)
 ```
-
-<!-- ## Embedded Application -->
-
-<!-- It's also possible to embed an entire Shiny application within an R Markdown document using the `shinyAppDir` function. This example embeds a Shiny application located in another directory: -->
-
-
-
-<!-- Note the use of the `height` parameter to determine how much vertical space the embedded application should occupy. -->
-
-<!-- You can also use the `shinyApp` function to define an application inline rather then in an external directory. -->
-
-<!-- In all of R code chunks above the `echo = FALSE` attribute is used. This is to prevent the R code within the chunk from rendering in the document alongside the Shiny components. -->
-
-
 
