Modification RMarkdown Template / vignette

--- a/parameters/wiki/Parameters_SACADA.Rmd
+++ b/parameters/wiki/Parameters_SACADA.Rmd
@@ -4,6 +4,12 @@ author: "ANR SACADA"
 date: "02/02/2022"
 output:
   html_document:
+      toc: TRUE
+      toc_depth: 2
+      toc_float:
+          collapsed: FALSE
+          smooth_scroll: TRUE
+      number_sections: TRUE    
 bibliography: Ref_Sacada.bib
 ---
 
