--- a/vignette/www/abm-sacada.bib
+++ b/vignette/www/abm-sacada.bib
@@ -452,3 +452,21 @@ author = {Rebecca Grant and Tiffany Charmet and Laura Schaeffer and Simon Galmic
   year={2021},
   publisher={Elsevier}
 }
+
+@article{Grimm2010,
+abstract = {The 'ODD' (Overview, Design concepts, and Details) protocol was published in 2006 to standardize the published descriptions of individual-based and agent-based models (ABMs). The primary objectives of ODD are to make model descriptions more understandable and complete, thereby making ABMs less subject to criticism for being irreproducible. We have systematically evaluated existing uses of the ODD protocol and identified, as expected, parts of ODD needing improvement and clarification. Accordingly, we revise the definition of ODD to clarify aspects of the original version and thereby facilitate future standardization of ABM descriptions. We discuss frequently raised critiques in ODD but also two emerging, and unanticipated, benefits: ODD improves the rigorous formulation of models and helps make the theoretical foundations of large models more visible. Although the protocol was designed for ABMs, it can help with documenting any large, complex model, alleviating some general objections against such models. ?? 2010 Elsevier B.V.},
+author = {Grimm, Volker and Berger, Uta and DeAngelis, Donald L. and Polhill, J. Gary and Giske, Jarl and Railsback, Steven F.},
+doi = {10.1016/j.ecolmodel.2010.08.019},
+file = {:C\:/Users/nd.luong/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Grimm et al. - 2010 - The ODD protocol A review and first update.pdf:pdf},
+isbn = {0304-3800},
+issn = {03043800},
+journal = {Ecological Modelling},
+keywords = {Model description,Model formulation,Model replication,Scientific communication,Standardization},
+number = {23},
+pages = {2760--2768},
+publisher = {Elsevier B.V.},
+title = {{The ODD protocol: A review and first update}},
+url = {http://dx.doi.org/10.1016/j.ecolmodel.2010.08.019},
+volume = {221},
+year = {2010}
+}
